# C-image-rotation

./: .gitignore  README.md
solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  image_edit.h  starter_master.h
solution/src/: bmp.c  image.c  image_edit.c  main.c  starter_master.c
